removed deprecated code